// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KnowledgeInjector > basic injection > should inject knowledge before the first user message 1`] = `
"<agent_knowledge>
<instruction>The following files are available. Refer to their content directly to answer questions. No source sets are associated.</instruction>
<files totalCount="1">
<file id="file-1" name="test.md">
File content here
</file>
</files>
</agent_knowledge>"
`;

exports[`KnowledgeInjector > file contents > should inject multiple file contents 1`] = `
"<agent_knowledge>
<instruction>The following files are available. Refer to their content directly to answer questions. No source sets are associated.</instruction>
<files totalCount="2">
<file id="file-1" name="file1.md">
Content of file 1
</file>
<file id="file-2" name="file2.ts">
Content of file 2
</file>
</files>
</agent_knowledge>"
`;

exports[`KnowledgeInjector > integration with BaseFirstUserContentProvider > should append to existing system injection message 1`] = `
"Existing injection content

<agent_knowledge>
<instruction>The following files are available. Refer to their content directly to answer questions. No source sets are associated.</instruction>
<files totalCount="1">
<file id="file-1" name="test.md">
File content
</file>
</files>
</agent_knowledge>"
`;

exports[`KnowledgeInjector > integration with BaseFirstUserContentProvider > should work when user message is first 1`] = `
"<agent_knowledge>
<instruction>The following files are available. Refer to their content directly to answer questions. No source sets are associated.</instruction>
<files totalCount="1">
<file id="file-1" name="file.md">
Content
</file>
</files>
</agent_knowledge>"
`;

exports[`KnowledgeInjector > mixed content > should inject both files and source sets 1`] = `
"<agent_knowledge>
<instruction>The following files and source sets are available. For files, refer to their content directly. For source sets, use the searchSourceSet tool to find relevant information.</instruction>
<files totalCount="1">
<file id="file-1" name="readme.md">
File content
</file>
</files>
<source_sets totalCount="1">
<source_set id="kb-1" name="API Reference" description="API docs" />
</source_sets>
</agent_knowledge>"
`;

exports[`KnowledgeInjector > source sets > should inject source sets 1`] = `
"<agent_knowledge>
<instruction>The following source sets are available for semantic search. Use the searchSourceSet tool to find relevant information.</instruction>
<source_sets totalCount="2">
<source_set id="kb-1" name="KB 1" description="Description 1" />
<source_set id="kb-2" name="KB 2" description="Description 2" />
</source_sets>
</agent_knowledge>"
`;
